@@ -4,6 +4,8 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 
 - Renamed Visitor to Validator::Visitor to conform with Data::DPath::Validator
   and moved it into a separate file.
+- Fixed failure because of Data::DPath >=0.41 by not using
+  MooseX::Role::BuildInstanceOf for the validator attributes
 
 2.002003  2010-09-16 10:44:40 Europe/Vienna
 
